# osal

./: .gitignore  CMakeLists.txt  README.md  main.cpp
adr/: queue.md
inc/: os-condvar.hpp  os-mutex.hpp  os-queue.hpp  os-thread.hpp  os.hpp  pimpl.hpp
src/: os-condvar-std.cpp  os-mutex-std.cpp  os-mutex-std.hpp  os-thread-std.cpp  pimpl-impl.hpp
